--- a/try_hilt/app/src/main/AndroidManifest.xml
+++ b/try_hilt/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.silso.try_hilt">
 
     <application
+        android:name=".TryHiltApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
