--- a/try_hilt/app/build.gradle
+++ b/try_hilt/app/build.gradle
@@ -11,12 +11,21 @@ android {
 
     defaultConfig {
         applicationId "com.silso.try_hilt"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildTypes {
@@ -39,6 +48,10 @@ dependencies {
 
     implementation'com.google.dagger:hilt-android:2.28-alpha'
     kapt'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
